template/service_ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: dash
  labels:
    app: dash
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  externalTrafficPolicy: Local
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8443
  selector:
    app.kubernetes.io/component: kubernetes-dashboard
    app.kubernetes.io/instance: dashboard
    app.kubernetes.io/name: kubernetes-dashboard
  type: LoadBalancer
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: dash-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /$1
# spec:
#   rules:
#     - host: env.talha.cf
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: ezio-service
#                 port:
#                   number: 80
