template/test_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: citylb
  namespace: default
  labels:
    app: citylb
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  externalTrafficPolicy: Local
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: city-v1
  type: LoadBalancer
