template/nginx_custom.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true
      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-conf
          items:
            - key: nginx.conf
              path: nginx.conf

---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx 
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ezio-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: altair.talha.cf
      http:
        paths:
          - path: /blog
            pathType: Prefix
            backend:
                service:
                  name: nginx
                  port:
                    number: 80
    - host: env.talha.cf
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
                service:
                  name: nginx
                  port:
                    number: 80
