template/redirect_ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: redirect-ingress
  annotations:
    ingress.kubernetes.io/configuration-snippet: |
      if ($host ~ ^(.+)\.somedomain\.io$) {
        return 301 https://$1.domain.io$request_uri;
      }
spec:
  rules:
  - host: "env.talha.cf"
    http:
      paths:
      - path: /
        backend:
          serviceName: the-app
          servicePort: 8002
