template/service_endpoints.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-ip
spec:
  ports:
  - name: app
    port: 80
    protocol: TCP
    targetPort: 80
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-ip
subsets:
- addresses:
  - ip: 103.139.237.4 # Change IP as required
  ports:
  - name: app
    port: 80
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ezio-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
    - host: env.talha.cf # Change domain to 4k.com
      http:
        paths:
          - path: /blog
            pathType: Prefix
            backend:
                service:
                  name: external-ip
                  port:
                    number: 80
