template/vanilla_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ezio-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: env.talha.cf
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ezio-service
                port:
                  number: 8500
